Fix spacing

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -11,7 +11,7 @@ $warning:                       {{ site.Params.style.warning | default "#ffc107"
 $danger:                        {{ site.Params.style.danger | default "#dc3545" }};
 $light:                         {{ site.Params.style.light | default "#f8f9fa" }};
 $dark:                          {{ site.Params.style.dark | default "#212529" }};
-$navbar-offset:                 {{ if site.Params.navigation.fixed }}{{ site.Params.navigation.offset | default "3em" }}{{ else }}0em{{ end }};
+$navbar-offset:                 {{ if site.Params.navigation.fixed }}{{ site.Params.navigation.offset | default "4em" }}{{ else }}0em{{ end }};
 
 // Include default variable overrides
 @import "common/variables.scss";
